--- a/ui/src/styles/app.css
+++ b/ui/src/styles/app.css
@@ -153,6 +153,21 @@
       transition-duration: 0.2s;
       cursor: pointer;
   }
+
+  .button-xlg{
+    background-color: #1433BA; /* Persian Blue */
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    margin: 8px 4px;
+    transition-duration: 0.2s;
+    cursor: pointer;
+}
   
   .button-toolbar{
       background-color: #1433BA; /* Persian Blue */
